syntax = "proto3";
package fusion.discoveryx.model;

import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";
import "scalapb/scalapb.proto";
import "fusion/define.proto";

option (scalapb.options) = {
  collection_type: "scala.collection.immutable.Seq"
  import: "com.fasterxml.jackson.annotation.JsonIgnoreProperties"
};

message ServerStatusQuery {
}
message ServerStatusBO {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    int32 status = 1;
}

////////////////////////////////////////////////////////////////////////////////
// Config
////////////////////////////////////////////////////////////////////////////////

message ConfigQuery {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    string namespace = 1;
    repeated string data_ids = 2;
    string group_name = 3;
}
message ConfigItem {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    string namespace = 1;
    string data_id = 2;
    string group_name = 3;
    string content = 4;
}
message ConfigQueried {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    repeated ConfigItem configs = 1;
}

message ConfigPublish {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    string namespace = 1;
    string data_id = 2;
    string group_name = 3;
    string content = 4;
}
message ConfigPublished {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    string version = 1;
    google.protobuf.StringValue old_content = 2;
}

message ConfigRemove {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    string namespace = 1;
    string data_id = 2;
    string group_name = 3;
}

message ConfigChangeListen {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    string namespace = 1;
    string data_id = 2;
    string group_name = 3;
}
message ConfigChanged {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    string namespace = 1;
    string data_id = 2;
    string group_name = 3;
    string content = 4;
    int32 version = 5;
    google.protobuf.StringValue old_content = 6;
    int32 change_type = 7; // 1: add, 2: update, 3: delete
}

message ConfigReply {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    int32 status = 1;
    oneof data {
        ConfigQueried queried = 2;
        ConfigPublished published = 3;
    }
}

////////////////////////////////////////////////////////////////////////////////
// Instance
////////////////////////////////////////////////////////////////////////////////

message InstanceRegister {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    string namespace = 1;
    string service_name = 2;
    string group_name = 3;
    string ip = 4;
    int32 port = 5;
    // instance weight
    double weight = 6;
    // instance health status
    bool healthy = 7;
    // If instance is enabled to accept request
    bool enabled = 8;
    // user extended attributes
    map<string, string> metadata = 9;
}

message InstanceModify {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    string namespace = 1;
    string service_name = 2;
    string group_name = 3;
    string ip = 4;
    int32 port = 5;
    // instance weight
    double weight = 6;
    // instance health status
    bool healthy = 7;
    // If instance is enabled to accept request
    bool enabled = 8;
    // user extended attributes
    map<string, string> metadata = 10;
}
message InstanceModifyResult {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    int32 status = 1;
}

message InstanceRemove {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    string namespace = 1;
    string service_name = 2;
    string group_name = 3;
    string ip = 4;
    int32 port = 5;
}

message Instance {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    // unique id of this instance.
    string instance_id = 1;
    // Service information of instance
    string namespace = 2;
    string service_name = 3;
    string group_name = 4;
    // instance ip
    string ip = 5;
    // instance port
    int32 port = 6;
    // instance weight
    double weight = 7;
    // instance health status
    bool healthy = 8;
    // If instance is enabled to accept request
    bool enabled = 9;
    // user extended attributes
    map<string, string> metadata = 10;
}

message InstanceQuery {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    string namespace = 1;
    string service_name = 2;
    string group_name = 3;
    // only return all healthy instances
    bool all_healthy = 4;
    // only return one healthy instance
    bool one_healthy = 5;
}
message InstanceQueryResult {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    repeated Instance instances = 2;
}

message InstanceHeartbeat {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    string namespace = 1;
    string service_name = 2;
    string group_name = 3;
    string ip = 4;
    int32 port = 5;
}

message InstanceReply {
    option (scalapb.message).annotations = "@JsonIgnoreProperties(Array(\"allFields\"))";
    int32 status = 1;
    oneof data {
        InstanceQueryResult queried = 2;
        InstanceModifyResult modified = 5;
    }
}
